fix: Fixed the blur on mobile

--- a/src/containers/SearchContainer/SearchContainer.scss
+++ b/src/containers/SearchContainer/SearchContainer.scss
@@ -14,6 +14,7 @@
   background-blend-mode: darken;
   box-shadow: 0px 10px 50px #9a469963, inset 0px 1px 0px #ffffff;
   backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
   border-radius: 40px 40px 0px 0px;
   height: 75%;
   width: 100%;
